--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,91 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <p><a href=""><span class="header logo format">Web</span>Studio</a></p>
+        <nav>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+        <a href="">info@devstudio.com</a>
+        <p>+38 096 111 11 11</p>
+    </header>
+    <main>
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button> 
+        </section>
+        <section>
+            <h2>Наши преимущества</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/services1.jpg" width="370" height="294" alt="Услуга1">
+                </li>
+                <li>
+                    <img src="./images/services2.jpg" width="370" height="294" alt="Услуга2"> 
+                </li>
+                <li>
+                    <img src="./images/services3.jpg" width="370" height="294" alt="Услуга3"> 
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/team1.jpg" width="270" height="260" alt="Представитель1">
+                    <p>Игорь Демьяненко</p>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/team2.jpg" width="270" height="260" alt="Представитель2">
+                    <p>Ольга Репина</p>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/team3.jpg" width="270" height="260" alt="Представитель3">
+                    <p>Николай Тарасов</p>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/team4.jpg" width="270" height="260" alt="Представитель4">
+                    <p>Михаил Ермаков</p>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p><a href=""><span class="header logo format">Web</span>Studio</a></p>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26 <br/>
+            info@example.com <br/>
+            +38 099 111 11 11
+        </address>
+    </footer>
 </body>
 </html>
