--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Студия</title>
 </head>
 <body>
     <header>
-        <p><a href=""><span class="header logo format">Web</span>Studio</a></p>
+        <a href=""><span class="header logo format">Web</span>Studio</a>
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -16,8 +16,8 @@
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <a href="">info@devstudio.com</a>
-        <p>+38 096 111 11 11</p>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
         <section>
@@ -25,7 +25,7 @@
             <button type="button">Заказать услугу</button> 
         </section>
         <section>
-            <h2>Наши преимущества</h2>
+            <h2 hidden>Наши преимущества</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -63,30 +63,30 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/team1.jpg" width="270" height="260" alt="Представитель1">
-                    <p>Игорь Демьяненко</p>
-                    <p>Product Designer</p>
+                    <img src="./images/team1.jpg" width="270" height="260" alt="Дизайнер продукта">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team2.jpg" width="270" height="260" alt="Представитель2">
-                    <p>Ольга Репина</p>
-                    <p>Frontend Developer</p>
+                    <img src="./images/team2.jpg" width="270" height="260" alt="Фронтенд разработчица">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team3.jpg" width="270" height="260" alt="Представитель3">
-                    <p>Николай Тарасов</p>
-                    <p>Marketing</p>
+                    <img src="./images/team3.jpg" width="270" height="260" alt="Маркетолог">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team4.jpg" width="270" height="260" alt="Представитель4">
-                    <p>Михаил Ермаков</p>
-                    <p>UI Designer</p>
+                    <img src="./images/team4.jpg" width="270" height="260" alt="UI дизайнер">
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <p><a href=""><span class="header logo format">Web</span>Studio</a></p>
+        <a href=""><span class="header logo format">Web</span>Studio</a>
         <address>
             г. Киев, пр-т Леси Украинки, 26 <br/>
             info@example.com <br/>
